--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.14.6",
     "register-service-worker": "^1.5.2",
+    "vee-validate": "^2.1.7",
     "vue": "^2.5.21",
     "vue-parallaxy": "^1.1.1",
     "vue-router": "^3.0.1"
