Add favicon to site

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,12 +3,17 @@
   "short_name": "dsc",
   "icons": [
     {
-      "src": ".favicon.png",
-      "sizes": "25x25",
+      "src": "img/icons/favicon-16x16.png",
+      "sizes": "16x16",
+      "type": "image/png"
+    },
+    {
+      "src": "img/icons/favicon-32x32.png",
+      "sizes": "32x32",
       "type": "image/png"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#ec193f"
